force-app/main/default/objects/Validated_Property_Address__c/Validated_Property_Address__c.object-meta.xml
<CustomObject>
    <description>This is the Object that gets created when a Property record is created and an API (currently Smartystreets) is called</description>
    <label>Validated Property Address</label>
    <nameField>
        <displayFormat>VPA-{0000000}</displayFormat>
        <label>Validated Property Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Validated Property Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>