force-app/main/default/objects/Validated_Property_Address__c/fields/DealId__c.field-meta.xml
<CustomField>
    <fullName>DealId__c</fullName>
    <formula>CASESAFEID(Property__r.Deal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DealId</label>
    <type>Text</type>
</CustomField>