force-app/main/default/objects/Validated_Property_Address__c/fields/Has_Same_Name__c.field-meta.xml
<CustomField>
    <fullName>Has_Same_Name__c</fullName>
    <description>Checked is the Street Address, City Name and Zipcode are the same on the Property as they are on the Validated Property Address record</description>
    <formula>AND(LOWER(VAddress1__c) == LOWER(Property__r.Name),  LOWER(Vcity_name__c)  == LOWER(Property__r.City__c),  Vzipcode__c == Property__r.ZipCode__c, LOWER(Vcounty_name__c) == LOWER(Property__r.County__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked is the Street Address, City Name and Zipcode are the same on the Property as they are on the Validated Property Address record</inlineHelpText>
    <label>Has Same Name</label>
    <type>Checkbox</type>
</CustomField>