force-app/main/default/objects/Validated_Property_Address__c/fields/JSON__c.field-meta.xml
<CustomField>
    <fullName>JSON__c</fullName>
    <description>This is the JSON that is returned</description>
    <inlineHelpText>This is the JSON that is returned</inlineHelpText>
    <label>JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>