force-app/main/default/objects/Validated_Property_Address__c/fields/Vactive__c.field-meta.xml
<CustomField>
    <fullName>Vactive__c</fullName>
    <description>Indicates whether the address is active, or &quot;in-service&quot; according to the USPS. Examples: New developments may have addresses but will be &quot;inactive&quot; until somebody moves in. Or, after Hurricane Katrina, addresses in the affected area were marked as inactive for a time. Residents may also mark their own mailboxes as inactive for privacy and other reasons.

Y — Address is active.
N — Address is inactive.
[blank] — Activity status is not known by the USPS.</description>
    <label>Verified active</label>
    <length>255</length>
    <type>Text</type>
</CustomField>