force-app/main/default/objects/Validated_Property_Address__c/fields/VAddress1__c.field-meta.xml
<CustomField>
    <fullName>VAddress1__c</fullName>
    <label>Verified First Address Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>