force-app/main/default/objects/Validated_Property_Address__c/fields/VAddressee__c.field-meta.xml
<CustomField>
    <fullName>VAddressee__c</fullName>
    <description>Will usually contain a firm name; intended recipient at an address</description>
    <inlineHelpText>Will usually contain a firm name; intended recipient at an address</inlineHelpText>
    <label>Verified Addressee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>