force-app/main/default/objects/Validated_Property_Address__c/fields/Vbuilding_default_indicator__c.field-meta.xml
<CustomField>
    <fullName>Vbuilding_default_indicator__c</fullName>
    <label>Verified default address idicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>