force-app/main/default/objects/Validated_Property_Address__c/fields/Vcandidate_Index__c.field-meta.xml
<CustomField>
    <fullName>Vcandidate_Index__c</fullName>
    <description>An input address can match multiple valid addresses. This ties the candidates to the input index.
(e.g., &quot;1 Rosedale Street Baltimore Maryland&quot; will return multiple candidates.)</description>
    <inlineHelpText>An input address can match multiple valid addresses. This ties the candidates to the input index.
(e.g., &quot;1 Rosedale Street Baltimore Maryland&quot; will return multiple candidates.)</inlineHelpText>
    <label>Verified Candidate Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>