force-app/main/default/objects/Validated_Property_Address__c/fields/Vcarrier_route__c.field-meta.xml
<CustomField>
    <fullName>Vcarrier_route__c</fullName>
    <description>The postal carrier route for the address. Consists of a one-letter prefix followed by a three-digit route designator.
(e.g., C007, R123)

C — Carrier Route (commonly termed &quot;City Route&quot;
R — Rural Route
H — Highway Contract Route
B — Post Office Box Section
G — General Delivery Unit</description>
    <label>Verified carrier route</label>
    <length>255</length>
    <type>Text</type>
</CustomField>