force-app/main/default/objects/Validated_Property_Address__c/fields/Vcity_name__c.field-meta.xml
<CustomField>
    <fullName>Vcity_name__c</fullName>
    <description>The USPS-preferred city name for this particular address, or an acceptable alternate if provided by the user.</description>
    <inlineHelpText>The USPS-preferred city name for this particular address, or an acceptable alternate if provided by the user</inlineHelpText>
    <label>Verified city name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>