force-app/main/default/objects/Validated_Property_Address__c/fields/Vcongressional_district__c.field-meta.xml
<CustomField>
    <fullName>Vcongressional_district__c</fullName>
    <description>The congressional district to which the address belongs. Output will be two digits from 01 - 53 or &quot;AL.&quot; &quot;AL&quot; means that the entire state (or territory) is covered by a single congressional district. These include Alaska, Delaware, Montana, North Dakota, South Dakota, Vermont, Wyoming, Washington DC, Virgin Islands, and other territories.</description>
    <label>Verified congressional district</label>
    <length>255</length>
    <type>Text</type>
</CustomField>