force-app/main/default/objects/Validated_Property_Address__c/fields/Vcounty_fips__c.field-meta.xml
<CustomField>
    <fullName>Vcounty_fips__c</fullName>
    <description>The 5-digit county FIPS (Federal Information Processing Standards) code. It is a combination of a 2-digit state FIPS code and a 3-digit county code assigned by the NIST (National Institute of Standards and Technology).</description>
    <label>Verified county fips</label>
    <length>255</length>
    <type>Text</type>
</CustomField>