force-app/main/default/objects/Validated_Property_Address__c/fields/Vcounty_name__c.field-meta.xml
<CustomField>
    <fullName>Vcounty_name__c</fullName>
    <description>The name of the county the address is in.</description>
    <label>Verified county name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>