force-app/main/default/objects/Validated_Property_Address__c/fields/Vdaylight_savings_time__c.field-meta.xml
<CustomField>
    <fullName>Vdaylight_savings_time__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the time zone &quot;obeys,&quot; or, in other words, adjusts their clocks forward and back with the seasons. This information is particularly useful to determine time in other time zones with areas that may or may not use daylight saving time - for example, Arizona, Hawaii, and,  Indiana.
true — Time zone observes daylight saving time.
If dst is absent from the response, then time zone does not observe daylight saving time.</description>
    <label>Verified daylight savings time</label>
    <type>Checkbox</type>
</CustomField>