force-app/main/default/objects/Validated_Property_Address__c/fields/Vdefault_address_indicator__c.field-meta.xml
<CustomField>
    <fullName>Vdefault_address_indicator__c</fullName>
    <description>Indicates whether the address is the &quot;default&quot; address for a building; for example, the main lobby

Y — Yes
N — No</description>
    <label>Verified default address indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>