force-app/main/default/objects/Validated_Property_Address__c/fields/Vdefault_city_name__c.field-meta.xml
<CustomField>
    <fullName>Vdefault_city_name__c</fullName>
    <description>The default city name for this 5-digit ZIP Code.</description>
    <inlineHelpText>The default city name for this 5-digit ZIP Code</inlineHelpText>
    <label>Verified default city name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>