force-app/main/default/objects/Validated_Property_Address__c/fields/Vdelivery_point__c.field-meta.xml
<CustomField>
    <fullName>Vdelivery_point__c</fullName>
    <description>The last two digits of the house/box number, unless an &quot;H&quot; record is matched, in which case this is the secondary unit number representing the delivery point information to form the delivery point barcode (DPBC).</description>
    <inlineHelpText>The last two digits of the house/box number, unless an &quot;H&quot; record is matched, in which case this is the secondary unit number representing the delivery point information to form the delivery point barcode (DPBC).</inlineHelpText>
    <label>Verified delivery point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>