force-app/main/default/objects/Validated_Property_Address__c/fields/Vdelivery_point_barcode__c.field-meta.xml
<CustomField>
    <fullName>Vdelivery_point_barcode__c</fullName>
    <label>V12-digit POSTNET barcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>