force-app/main/default/objects/Validated_Property_Address__c/fields/Vdelivery_point_check_digit__c.field-meta.xml
<CustomField>
    <fullName>Vdelivery_point_check_digit__c</fullName>
    <description>Correction character, or check digit, for the 11-digit barcode.</description>
    <inlineHelpText>Correction character, or check digit, for the 11-digit barcode</inlineHelpText>
    <label>Verified delivery point check digit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>