force-app/main/default/objects/Validated_Property_Address__c/fields/Vdpv_cmra__c.field-meta.xml
<CustomField>
    <fullName>Vdpv_cmra__c</fullName>
    <description>Indicates whether the address is associated with a Commercial Mail Receiving Agency (CMRA), also known as a private mailbox (PMB) operator. A CMRA is a business through which USPS mail may be sent or received, for example the UPS Store and Mailboxes Etc.

Y — Address is associated with a valid CMRA.
N — Address is not associated with a valid CMRA.
[blank] — Address was not submitted for CMRA verification.</description>
    <inlineHelpText>Indicates whether the address is associated with a Commercial Mail Receiving Agency (CMRA), also known as a private mailbox (PMB) operator. A CMRA is a business through which USPS mail may be sent or received, for example the UPS Store and Mailboxes Etc.</inlineHelpText>
    <label>Verified dpv_cmra</label>
    <length>255</length>
    <type>Text</type>
</CustomField>