force-app/main/default/objects/Validated_Property_Address__c/fields/Vdpv_footnotes__c.field-meta.xml
<CustomField>
    <fullName>Vdpv_footnotes__c</fullName>
    <label>Verified dpv_footnotes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>