force-app/main/default/objects/Validated_Property_Address__c/fields/Velot_sequence__c.field-meta.xml
<CustomField>
    <fullName>Velot_sequence__c</fullName>
    <description>eLOT (Enhanced Line of Travel) 4-digit sequence number.</description>
    <label>Verified elot sequence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>