force-app/main/default/objects/Validated_Property_Address__c/fields/Velot_sort__c.field-meta.xml
<CustomField>
    <fullName>Velot_sort__c</fullName>
    <description>eLOT (Enhanced Line of Travel) product was developed to give mailers the ability to sort their mailings by line of travel sequence.
A — Ascending
D — Descending
[blank] — Address not submitted for eLOT</description>
    <label>Verified elot sort</label>
    <length>255</length>
    <type>Text</type>
</CustomField>