force-app/main/default/objects/Validated_Property_Address__c/fields/Vextra_secondary_designator__c.field-meta.xml
<CustomField>
    <fullName>Vextra_secondary_designator__c</fullName>
    <description>Description of the location type within a campus
(e.g., Bldg, Unit, Lot, etc.)</description>
    <inlineHelpText>Description of the location type within a campus
(e.g., Bldg, Unit, Lot, etc.)</inlineHelpText>
    <label>Verified extra secondary designator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>