force-app/main/default/objects/Validated_Property_Address__c/fields/Vextra_secondary_number__c.field-meta.xml
<CustomField>
    <fullName>Vextra_secondary_number__c</fullName>
    <description>Descriptive information about the location of a building within a campus
(e.g., E-5 in &quot;5619 Loop 1604, Bldg E-5, Ste. 101 San Antonio TX&quot;).</description>
    <inlineHelpText>Descriptive information about the location of a building within a campus
(e.g., E-5 in &quot;5619 Loop 1604, Bldg E-5, Ste. 101 San Antonio TX&quot;)</inlineHelpText>
    <label>Verified extra secondary number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>