force-app/main/default/objects/Validated_Property_Address__c/fields/Vfootnotes__c.field-meta.xml
<CustomField>
    <fullName>Vfootnotes__c</fullName>
    <description>Indicates which changes were made to the input address. Footnotes are delimited by a # character. See the footnotes table below for details.</description>
    <label>Verified footnotes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>