force-app/main/default/objects/Validated_Property_Address__c/fields/Vinput_index__c.field-meta.xml
<CustomField>
    <fullName>Vinput_index__c</fullName>
    <description>The order in which this address was submitted with the others
(0 if alone)</description>
    <inlineHelpText>The order in which this address was submitted with the others
(0 if alone)</inlineHelpText>
    <label>Verified Input Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>