force-app/main/default/objects/Validated_Property_Address__c/fields/Vlacslink_indicator__c.field-meta.xml
<CustomField>
    <fullName>Vlacslink_indicator__c</fullName>
    <description>Indicates whether there is an address match in the LACSLink database.

Y — LACS record match; a new address could be furnished because the input record matched a record in the master file.
S — LACS record - secondary number dropped; the record is a ZIP+4 street level or high-rise match. The input record matched a master file record, but the input address had a secondary number and the master file record did not.
N — No match; a new address could not be furnished; the input record could not be matched to a record in the master file.
F — False positive; a false positive record was detected.
[blank] — No LACSLink lookup attempted.</description>
    <label>Verified lacslink indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>