force-app/main/default/objects/Validated_Property_Address__c/fields/VLongitude_and_Latitude__c.field-meta.xml
<CustomField>
    <fullName>VLongitude_and_Latitude__c</fullName>
    <label>Verified Longitude &amp; Latitude</label>
    <scale>9</scale>
    <type>Location</type>
</CustomField>