force-app/main/default/objects/Validated_Property_Address__c/fields/Vplus4_code__c.field-meta.xml
<CustomField>
    <fullName>Vplus4_code__c</fullName>
    <description>The 4-digit add-on code (more specific than 5-digit ZIP).</description>
    <inlineHelpText>The 4-digit add-on code (more specific than 5-digit ZIP)</inlineHelpText>
    <label>Verified plus4_code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>