force-app/main/default/objects/Validated_Property_Address__c/fields/Vpmb_designator__c.field-meta.xml
<CustomField>
    <fullName>Vpmb_designator__c</fullName>
    <description>Private mailbox unit designator (assigned by a CMRA).</description>
    <inlineHelpText>Private mailbox unit designator (assigned by a CMRA)</inlineHelpText>
    <label>Verified pmb designator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>