force-app/main/default/objects/Validated_Property_Address__c/fields/Vpmb_number__c.field-meta.xml
<CustomField>
    <fullName>Vpmb_number__c</fullName>
    <description>The private mailbox number, assigned by a CMRA.</description>
    <inlineHelpText>The private mailbox number, assigned by a CMRA</inlineHelpText>
    <label>Verified pmb number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>