force-app/main/default/objects/Validated_Property_Address__c/fields/Vprecision__c.field-meta.xml
<CustomField>
    <fullName>Vprecision__c</fullName>
    <description>Indicates the precision of the latitude and longitude values.

Unknown — Coordinates not known. Reasons could include: address is invalid, military address (APO or FPO), lat/lon coordinates not available.
Zip5 — Accurate to a 5-digit ZIP Code level (least precise)
Zip6 — Accurate to a 6-digit ZIP Code level
Zip7 — Accurate to a 7-digit ZIP Code level
Zip8 — Accurate to an 8-digit ZIP Code level
Zip9 — Accurate to a 9-digit ZIP Code level (most precise but NOT rooftop level)

Note: Concerning addresses for which the ZIP9 precision is not available, the ZIP# precision is interpolated based on neighboring addresses. Thus, ZIP7 is an average of all the lat/long coordinates of nearby ZIP Codes that share those first 7 digits.</description>
    <label>Verified precision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>