force-app/main/default/objects/Validated_Property_Address__c/fields/VProperty_Street_Number__c.field-meta.xml
<CustomField>
    <fullName>VProperty_Street_Number__c</fullName>
    <description>The house, PO Box, or building number.</description>
    <label>Verified Property Street Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>