force-app/main/default/objects/Validated_Property_Address__c/fields/Vrecord_type__c.field-meta.xml
<CustomField>
    <fullName>Vrecord_type__c</fullName>
    <label>Verified record type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>