force-app/main/default/objects/Validated_Property_Address__c/fields/VSecond_Address_Line__c.field-meta.xml
<CustomField>
    <fullName>VSecond_Address_Line__c</fullName>
    <label>Verified Second Address Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>