force-app/main/default/objects/Validated_Property_Address__c/fields/Vsecondary_number__c.field-meta.xml
<CustomField>
    <fullName>Vsecondary_number__c</fullName>
    <description>Apartment or suite number, if any</description>
    <inlineHelpText>Apartment or suite number, if any</inlineHelpText>
    <label>Verified secondary number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>