force-app/main/default/objects/Validated_Property_Address__c/fields/Vstate_abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Vstate_abbreviation__c</fullName>
    <description>The two-letter state abbreviation.</description>
    <inlineHelpText>The two-letter state abbreviation.</inlineHelpText>
    <label>Verified state abbreviation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>