force-app/main/default/objects/Validated_Property_Address__c/fields/VStreet_name__c.field-meta.xml
<CustomField>
    <fullName>VStreet_name__c</fullName>
    <description>The name of the street</description>
    <inlineHelpText>The name of the street.</inlineHelpText>
    <label>Verified Street name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>