force-app/main/default/objects/Validated_Property_Address__c/fields/Vstreet_postdirection__c.field-meta.xml
<CustomField>
    <fullName>Vstreet_postdirection__c</fullName>
    <description>Directional information after a street name (N, SW, etc.).</description>
    <inlineHelpText>Directional information after a street name (N, SW, etc.)</inlineHelpText>
    <label>Verified street postdirection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>