force-app/main/default/objects/Validated_Property_Address__c/fields/Vstreet_predirection__c.field-meta.xml
<CustomField>
    <fullName>Vstreet_predirection__c</fullName>
    <description>Directional information before a street name (N, SW, etc.)</description>
    <inlineHelpText>Directional information before a street name (N, SW, etc.)</inlineHelpText>
    <label>Verified street predirection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>