force-app/main/default/objects/Validated_Property_Address__c/fields/Vstreet_suffix__c.field-meta.xml
<CustomField>
    <fullName>Vstreet_suffix__c</fullName>
    <description>Abbreviated value describing the street (St, Ave, Blvd, etc.).</description>
    <inlineHelpText>Abbreviated value describing the street (St, Ave, Blvd, etc.)</inlineHelpText>
    <label>Verified street suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>