force-app/main/default/objects/Validated_Property_Address__c/fields/Vsuitelink_match__c.field-meta.xml
<CustomField>
    <fullName>Vsuitelink_match__c</fullName>
    <description>Indicates a match (or not) to the USPS SuiteLink data. SuiteLink attempts to provide secondary information such as &quot;suite&quot; or &quot;apartment&quot; whenever there is a match based on this address.</description>
    <label>Verified suitelink match</label>
    <length>255</length>
    <type>Text</type>
</CustomField>