force-app/main/default/objects/Validated_Property_Address__c/fields/Vtime_zone__c.field-meta.xml
<CustomField>
    <fullName>Vtime_zone__c</fullName>
    <description>Indicates the common name of the time zone associated with the address.
Valid Responses
Alaska, Atlantic, Central, Eastern, Hawaii, Mountain, None, Pacific, Samoa, UTC+9, UTC+10, UTC+11, UTC+12</description>
    <label>Verified time zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>