force-app/main/default/objects/Validated_Property_Address__c/fields/VUrbanization__c.field-meta.xml
<CustomField>
    <fullName>VUrbanization__c</fullName>
    <description>Primarily for Puerto Rican addresses; a very important component which contains area, sector, or development within a geographic area; should be included after the name of the recipient.</description>
    <inlineHelpText>Primarily for Puerto Rican addresses; a very important component which contains area, sector, or development within a geographic area; should be included after the name of the recipient</inlineHelpText>
    <label>Urbanization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>