force-app/main/default/objects/Validated_Property_Address__c/fields/Vutc_offset__c.field-meta.xml
<CustomField>
    <fullName>Vutc_offset__c</fullName>
    <description>Indicates the number of hours the time zone is offset from Universal Time Coordinated (UTC), the international time standard, also known as Greenwich Meridian Time (GMT).
Valid Responses
-11, -10, -9, -8, -7, -6, -5, -4, 0, 9, 10, 11, 12</description>
    <label>Verified utc_offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>