force-app/main/default/objects/Validated_Property_Address__c/fields/Vzipcode__c.field-meta.xml
<CustomField>
    <fullName>Vzipcode__c</fullName>
    <description>The 5-digit ZIP Code.</description>
    <inlineHelpText>The 5-digit ZIP Code</inlineHelpText>
    <label>Verified zipcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>